references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/CalculationUsage_Invalid1.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:f13094a46f56565c95da48d5076eb2a2d2c77dd9ea4ec83b502eed6666356819
size 2772
